--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
+    "react-dropzone": "^14.2.3",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
