--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
     "react-dropzone": "^14.2.3",
+    "react-rnd": "^10.4.12",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
